Bug 422864 - GHNS window indicates that an addon was installed despite installation failure
Summary: GHNS window indicates that an addon was installed despite installation failure
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-12 10:54 UTC by Patrick Silva
Modified: 2020-07-17 08:30 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.73
Sentry Crash Report:


Attachments
screen recording (2.55 MB, video/webm)
2020-06-12 10:54 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-06-12 10:54:52 UTC
Created attachment 129253 [details]
screen recording

SUMMARY
Button labeled "Uninstall" and the green icon in the upper left corner
indicate that an addon was installed even if the installation failed.
Watch the attached screen recording please.

EXPECTED RESULT
not installed addon should never be listed as installed.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 1 Alexander Lohnau 2020-07-15 17:51:21 UTC
Can reproduce, I have fixed a similar bug for installations that use install scripts some time ago (for example the dolphin services). Maybe I will find the time to loo into this one :-).
Comment 2 Bug Janitor Service 2020-07-16 18:29:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/10
Comment 3 Alexander Lohnau 2020-07-17 08:09:06 UTC
Git commit 520f4ca48fd30b866fb3cc52705e49029428f1be by Alexander Lohnau.
Committed on 17/07/2020 at 08:07.
Pushed by alex into branch 'master'.

Set entry to uninstalled if installation fails

In the described case the entries state is set to installed when
the lambda is called. Consequently the state was not reset
and the entry was marked as installed.
FIXED-IN: 5.73

M  +1    -1    src/core/installation.cpp

https://invent.kde.org/frameworks/knewstuff/commit/520f4ca48fd30b866fb3cc52705e49029428f1be