Set entry to uninstalled if installation fails

In the described case the entries state is set to installed when
the lambda is called. Consequently the state was not reset
and the entry was marked as installed.

BUG: 422864
FIXED-IN: 5.73